# benchmark

./: Cargo.toml  build.rs
.github/workflows/: linux_build.yml  macos_build.yml
rawdisk/: CMakeLists.txt  Cargo.toml  build.rs  rawdisk.pc.in
rawdisk/api/: rawdisk.h
rawdisk/src/: disk.c  lib.rs
src/: benchmark.rs  cpu.rs  cpuload.rs  disk.rs  main.rs  netload.rs  network.rs  test.rs
src/windows/: root.rs
src/windows_network/: root.rs
