[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpuload = { git = "https://github.com/uglyoldbob/Flops.git", version = "0.1.1" }
egui-multiwin = "0.1.7"
quanta = "0.11.1"

[target.'cfg(unix)'.dependencies]
lm-sensors = "0.1.6"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name="main_bench"
path="src/benchmark.rs"
harness = false