[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hwlocality"]
hwlocality = ["dep:hwlocality"]

[dependencies]
chrono = "0.4.26"
cpuload = { git = "https://github.com/uglyoldbob/Flops.git", version = "0.1.1" }
egui-multiwin = "0.1.8"
quanta = "0.11.1"
timer = "0.2.0"

[dependencies.hwlocality]
git = "https://github.com/uglyoldbob/hwlocality.git"
version = "1.0.0"
features = ["bundled", "hwloc-2_8_0"]
optional=true

[target.'cfg(unix)'.dependencies]
lm-sensors = "0.1.6"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name="main_bench"
path="src/benchmark.rs"
harness = false