[package]
name = "rawdisk"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cfg-if = "^1.0"
cmake = "0.1"
version-compare = "0.1"
pkg-config = "0.3.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    ]